--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 THEME=https://raw.githubusercontent.com/rcvd/obsidian_ia/master/obsidian.css
 BASE_THEME=light
+dgHomeLink=true
+dgPassFrontmatter=false
